Upgrade html and css

--- a/responsive-Login-Form/index.html
+++ b/responsive-Login-Form/index.html
@@ -70,7 +70,22 @@
             </form>
         </section>
         <section class="panels-container">
-
+            <div class="panel left-panel">
+                <div class="content">
+                    <h3>Member of Brand?</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, laborum similique molestias sint eum?</p>
+                    <button class="btn">Sign in</button>
+                </div>
+                <img src="images/undraw_access_account_re_8spm.svg" alt="" class="image">
+            </div>
+            <div class="panel right-panel">
+                <div class="content">
+                    <h3>New to Brand?</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, qui neque porro laborum similique molestias sint eum?</p>
+                    <button class="btn">Sign up</button>
+                </div>
+                <img src="images/undraw_sign_up_n6im.svg" alt="" class="image">
+            </div>
         </section>
     </main>
 </body>
