Upgrade slideshow finished

--- a/slideshow-with-HTML-CSS/index.html
+++ b/slideshow-with-HTML-CSS/index.html
@@ -9,11 +9,11 @@
 <body>
     <main class="content">
         <div class="slides">
-            <input type="radio" name="slide" id="slide1" checked>
-            <input type="radio" name="slide" id="slide2">
-            <input type="radio" name="slide" id="slide3">
-            <input type="radio" name="slide" id="slide4">
-            <input type="radio" name="slide" id="slide5">
+            <input type="radio" name="slide" id="slide1" checked class="none">
+            <input type="radio" name="slide" id="slide2" class="none">
+            <input type="radio" name="slide" id="slide3" class="none">
+            <input type="radio" name="slide" id="slide4" class="none">
+            <input type="radio" name="slide" id="slide5" class="none">
 
             <div class="slide s1">
                 <img src="images/img01.jpg" alt="Foto de dentro da biblioteca de Porto-PT">
