--- a/slider-with-HTML-CSS-JS/index.html
+++ b/slider-with-HTML-CSS-JS/index.html
@@ -7,6 +7,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="slider">
+        <!--Radio Buttons-->
+        <div class="slides">
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio4">
+        
+            <!--Slide images-->
+            <div class="slide first">
+                <img src="images/img1.jpg" alt="image 1">
+            </div>
+            <div class="slide">
+                <img src="images/img2.jpg" alt="image 2">
+            </div>
+            <div class="slide">
+                <img src="images/img3.jpg" alt="image 3">
+            </div>
+            <div class="slide">
+                <img src="images/img4.jpg" alt="image 4">
+            </div>
+        </div>
+
+        <!--Navigation auto-->
+        <div class="navigation-auto">
+            <div class="auto-btn1"></div>
+            <div class="auto-btn2"></div>
+            <div class="auto-btn3"></div>
+            <div class="auto-btn4"></div>
+        </div>
+
+        <div class="manual-navigation">
+            <label for="radio1" class="manual-btn"></label>
+            <label for="radio2" class="manual-btn"></label>
+            <label for="radio3" class="manual-btn"></label>
+            <label for="radio4" class="manual-btn"></label>
+        </div>
+
+    </div>
+
+
 
     <script src="script.js">
 
