--- a/grid-layout/grid-template/index.html
+++ b/grid-layout/grid-template/index.html
@@ -7,6 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>grid-template: 50px 1fr / 100px 1fr 100px</h1>
+        <section class="grid grid-template-1">
+            <div class="item">logo</div>
+            <div class="item">nav</div>
+            <div class="item">content</div>
+            <div class="item">sidenav</div>
+            <div class="item">advert</div>
+            <div class="item">footer</div>
+        </section>
+    </div>
+        
+    <div>
+        <h1>grid-template (areas, columns e rows)</h1>
+        <section class="grid grid-template-2">
+            <div class="item logo">logo</div>
+            <div class="item nav">nav</div>
+            <div class="item content">content</div>
+            <div class="item sidenav">sidenav</div>
+            <div class="item advert">advert</div>
+            <div class="item footer">footer</div>
+        </section>
+    </div>
 </body>
 </html>
