--- a/gridLayout-And-Flexbox/frame2/index.html
+++ b/gridLayout-And-Flexbox/frame2/index.html
@@ -20,7 +20,7 @@
 
     <h1>Section Flexbox</h1>
 
-    <section class="flex">
+    <section class="grid">
         <div>
             <img src="images/lobo1.jpg">
             <p>Legenda...</p>
@@ -44,6 +44,22 @@
         <div>
             <img src="images/lobo3.jpg">
             <p>Legenda...</p>
+        </div>
+        <div>
+            <img src="images/lobo1.jpg">
+            <p>Legenda...</p>
+        </div>
+        <div>
+            <img src="images/lobo2.jpg">
+            <p>Legenda...</p>
+        </div>
+        <div>
+            <img src="images/lobo3.jpg">
+            <p>Legenda...</p>
+        </div>
+        <div class="anuncio">
+            <img src="images/lobo1.jpg">
+            <p>Anuncio...</p>
         </div>
     </section>
 </body>
