Update frame2, frame3 and frame4

--- a/gridLayout-And-Flexbox/frame3/index.html
+++ b/gridLayout-And-Flexbox/frame3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,30 +20,28 @@
 
     <h1>Section Flexbox</h1>
 
-    <section class="flex">
-        <div>
+    <section class="grid">
+        <div class="video">
             <img src="images/lobo1.jpg">
-            <p>Legenda...</p>
+            <h2>Como criar sites...</h2>
         </div>
-        <div>
-            <img src="images/lobo2.jpg">
-            <p>Legenda...</p>
-        </div>
-        <div>
-            <img src="images/lobo3.jpg">
-            <p>Legenda...</p>
-        </div>
-        <div>
-            <img src="images/lobo1.jpg">
-            <p>Legenda...</p>
-        </div>
-        <div>
-            <img src="images/lobo2.jpg">
-            <p>Legenda...</p>
-        </div>
-        <div>
-            <img src="images/lobo3.jpg">
-            <p>Legenda...</p>
+        <div class="sidebar">
+            <div>
+                <img src="images/lobo2.jpg">
+                <p>Legenda...</p>
+            </div>
+            <div>
+                <img src="images/lobo3.jpg">
+                <p>Legenda...</p>
+            </div>
+            <div>
+                <img src="images/lobo1.jpg">
+                <p>Legenda...</p>
+            </div>
+            <div>
+                <img src="images/lobo2.jpg">
+                <p>Legenda...</p>
+            </div>
         </div>
     </section>
 </body>
