--- a/gridLayout-And-Flexbox/frame3/index.html
+++ b/gridLayout-And-Flexbox/frame3/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
 
-    <h1>Section Flexbox</h1>
+    <h1>Section Grid</h1>
 
     <section class="grid">
         <div class="video">
