--- a/gridLayout-And-Flexbox/frame4/index.html
+++ b/gridLayout-And-Flexbox/frame4/index.html
@@ -18,31 +18,19 @@
         </nav>
     </header>
 
-    <h1>Section Flexbox</h1>
+    <h1>Section Grid</h1>
 
-    <section class="flex">
-        <div>
+    <section class="grid">
+        <div class="grid-item">
+            <img src="images/lobo4.jpg">
+            <p>Legenda...</p>
+        </div>
+        <div class="grid-item">
             <img src="images/lobo1.jpg">
             <p>Legenda...</p>
         </div>
-        <div>
+        <div class="grid-item">
             <img src="images/lobo2.jpg">
-            <p>Legenda...</p>
-        </div>
-        <div>
-            <img src="images/lobo3.jpg">
-            <p>Legenda...</p>
-        </div>
-        <div>
-            <img src="images/lobo1.jpg">
-            <p>Legenda...</p>
-        </div>
-        <div>
-            <img src="images/lobo2.jpg">
-            <p>Legenda...</p>
-        </div>
-        <div>
-            <img src="images/lobo3.jpg">
             <p>Legenda...</p>
         </div>
     </section>
